Add a test to get interactions
